# weigou

./: .gitignore  README.md  pyproject.toml
scripts/: __init__.py  config.py  metrics.py  slurm.py  train.py
slurm/: base_config.json  base_job.slurm
tests/: conftest.py  test_context_parallel.py  test_data_parallel.py  test_data_unit.py  test_dataloader.py  test_pipeline_parallel.py  test_tensor_parallel.py
weigou/: checkpoint.py  config.py  data.py  model.py  trainer.py  utils.py
weigou/parallel/: __init__.py  context.py  data.py  manager.py  pipeline.py  tensor.py
